<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.manuelsanchezferna.json.MainActivity">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/rectangle"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/btn_default"
            android:elevation="14dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GENEROS"
            android:textSize="30sp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="60dp"
            />

        <TextView
            android:id="@+id/text_cat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="120dp"
            android:text="@string/ROCK"
            android:textSize="18sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat1"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/text_cat1"
            android:layout_marginLeft="26dp"
            />

        <TextView
            android:id="@+id/text_cat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cat1"
            android:text="@string/HipHop"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat2"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_below="@+id/text_cat2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="26dp"
            />

        <TextView
            android:id="@+id/text_cat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cat2"
            android:text="@string/FUSION"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat3"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_below="@+id/text_cat3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="26dp"
            />
        <TextView
            android:id="@+id/text_cat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cat3"
            android:text="@string/SCREAMO"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat4"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_below="@+id/text_cat4"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="26dp"
            />
        <TextView
            android:id="@+id/text_cat5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cat4"
            android:text="@string/RAPMETAL"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat5"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_below="@+id/text_cat5"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="26dp"
            />
        <TextView
            android:id="@+id/text_cat6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Cat5"
            android:text="@string/BLUES"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Cat6"
            android:layout_width= "match_parent"
            android:layout_height="180sp"
            android:layout_below="@+id/text_cat6"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="26dp"
            />


    </RelativeLayout>
</ScrollView>