<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manuelsanchezferna.json.ConfigUsuario">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/btn_default"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/text_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linia_config"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linia_config"
        android:layout_marginTop="41dp"
        android:text="@string/configuracion_de_perfil"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Foto_perfil"
        android:textSize="16sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
   />

    <EditText
        android:id="@+id/editcontrasenya"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/text_contrasenya"
        android:layout_alignBottom="@+id/text_contrasenya"
        android:layout_toRightOf="@+id/text_foto"
        android:layout_toEndOf="@+id/text_foto"
        android:inputType="textPassword"
    />



    <TextView
        android:id="@+id/text_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_marginLeft="30dp"
        android:text="@string/Contrasenya"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_contrasenya"
        android:layout_alignStart="@+id/text_contrasenya"
        android:layout_below="@+id/text_contrasenya"
        android:layout_marginTop="27dp"
        android:text="@string/Email"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_gustos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_mail"
        android:layout_alignStart="@+id/text_mail"
        android:layout_below="@+id/text_mail"
        android:layout_marginTop="26dp"
        android:text="@string/Gustos_musicales"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/text_gustos"
        android:layout_marginTop="98dp"
        android:text="@string/Favoritos"
        android:textSize="16sp" />

    <View
        android:id="@+id/linia_config"
        android:layout_height="5sp"
        android:layout_width="300sp"
        android:background="#ce009688"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/text_config" />

    <ToggleButton
        android:id="@+id/btn_public"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:onClick="cpriv"
        android:textAllCaps="false"
        android:textOff="@string/Privado"
        android:textOn="@string/Publico"
        android:layout_below="@+id/editgustos"
        android:layout_alignLeft="@+id/text_gustos"
        android:layout_alignStart="@+id/text_gustos" />

    <Button
        android:id="@+id/btn_subirfoto"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80sp"
        android:layout_height="35sp"
        android:elevation="3dp"
        android:onClick="buttoni"
        android:text="@string/Subir_foto"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/text_foto"
        android:layout_alignBottom="@+id/text_foto"
        android:layout_alignLeft="@+id/btnpass"
        android:layout_alignStart="@+id/btnpass" />

    <Button
        android:id="@+id/btnpass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80sp"
        android:layout_height="35sp"
        android:elevation="3dp"
        android:onClick="cpass"
        android:text="@string/Cambiar"
        android:textAllCaps="false"
        android:layout_marginLeft="290dp"
        android:textSize="12sp"
        android:layout_alignTop="@+id/editcontrasenya" />

    <Button
        android:id="@+id/btnemail"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80sp"
        android:layout_height="35sp"
        android:elevation="3dp"
        android:onClick="cemail"
        android:text="@string/Cambiar"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/editmail"
        android:layout_alignLeft="@+id/btnpass"
        android:layout_alignStart="@+id/btnpass" />


    <Button
        android:id="@+id/btngustos"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="80sp"
        android:layout_height="35sp"
        android:layout_alignBaseline="@+id/editgustos"
        android:layout_alignBottom="@+id/editgustos"
        android:layout_marginLeft="290dp"
        android:elevation="3dp"
        android:onClick="cgustos"
        android:text="@string/Cambiar"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gustos_musicales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190sp"
        android:layout_alignTop="@+id/text_gustos"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editmail"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/editcontrasenya"
        android:layout_marginLeft="90dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editgustos"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="false"
        android:textSize="16sp"
        android:layout_below="@+id/editmail"
        android:layout_toRightOf="@+id/text_gustos"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <Spinner
        android:id="@+id/Sp1"
        android:layout_marginTop="62dp"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="fill"
        android:visibility="visible"
        android:layout_below="@+id/btn_public"
        android:layout_marginLeft="50dp">
    </Spinner>

    <Spinner
        android:id="@+id/Sp2"
        android:layout_marginTop="62dp"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="fill"
        android:visibility="visible"
        android:layout_below="@+id/btn_public"
        android:layout_marginLeft="220dp">
    </Spinner>

    <Spinner
        android:id="@+id/Sp3"
        android:layout_marginTop="132dp"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="fill"
        android:visibility="visible"
        android:layout_below="@+id/btn_public"
        android:layout_marginLeft="50dp">
    </Spinner>

    <Spinner
        android:id="@+id/Sp4"
        android:layout_marginTop="132dp"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="fill"
        android:visibility="visible"
        android:layout_below="@+id/btn_public"
        android:layout_marginLeft="220dp">
    </Spinner>


    <ImageView
        android:id="@+id/photo"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_above="@+id/editcontrasenya"
        android:layout_alignLeft="@+id/gustos_musicales"
        android:layout_alignStart="@+id/gustos_musicales"
        android:onClick="clickimage"
        app:srcCompat="@mipmap/circulo_ona" />

</RelativeLayout>
